# rp2040-tickv

./: Cargo.toml  README.md  memory.x
.cargo/: config.toml
examples/: basic_read_write.rs
src/: lib.rs
